# LibraryInventorySystemFinalProjectsCS1C

./: .gitignore  Book.cpp  Book.h  CMakeLists.txt  Compartment.cpp  Compartment.h  Item.cpp  Item.h  Library Inventory System.docx.md  Magazine.cpp  Magazine.h  Movie.cpp  Movie.h  book_item.cpp  book_item.h  coding_standard.md  compartment_location.h  item_creator.cpp  item_creator.h  library_compartment.cpp  library_compartment.h  library_item.cpp  library_item.h  library_storage.cpp  library_storage.h  magazine_item.cpp  magazine_item.h  main.cpp  movie_item.cpp  movie_item.h  operation_result.h  program  shelf.cpp  shelf.h
